Add dist to gitignore again

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ethereum.org website",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "docs:build": "vuepress build docs"
   },
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
