--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
+  "dependencies": {
+    "markdown-it-attrs": "^2.3.2"
+  },
   "devDependencies": {
     "vuepress": "^1.0.0-alpha.47",
-    "@vuepress/plugin-register-components": "^1.0.0-alpha.20",
-    "markdown-it-attrs": "^2.3.2"
+    "@vuepress/plugin-register-components": "^1.0.0-alpha.20"
   }
 }
