Add redirects for legacy pages v2 [Fixes #236] (#240)

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.0.0-alpha.47"
+  },
+  "dependencies": {
+    "vuepress-plugin-redirect": "1.2.0-alpha.0"
   }
 }
