Add simple server endpoint for CrowdIn API

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,7 @@
 
   # Directory with the serverless Lambda functions to deploy to AWS.
   functions = "docs/.vuepress/dist/lambda"
+  # functions = "lambda"
 
 # Production context: all deploys from the Production branch set in your site's
 # deploy contexts will inherit these settings.
