--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:lambda": "netlify-lambda build lambda",
     "docs:build": "vuepress build docs",
     "postinstall": "netlify-lambda install",
-    "test": "./node_modules/.bin/jest --silent"
+    "test": "./node_modules/.bin/jest --silent",
+    "lint": "eslint \"docs/.vuepress/**/*.{js,vue}\"",
+    "lint:fix": "eslint --fix \"docs/.vuepress/**/*.{js,vue}\""
   },
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
@@ -42,8 +44,11 @@
     "@babel/preset-env": "^7.6.3",
     "@vue/test-utils": "^1.0.0-beta.29",
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "npm-run-all": "^4.1.5",
