--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "pretty-quick": "^2.0.0",
     "vue-jest": "^3.0.5",
     "vuepress": "^1.0.0-alpha.47"
   },
@@ -61,5 +63,10 @@
     "netlify-lambda": "^1.6.3",
     "random-js": "^2.1.0",
     "vuepress-plugin-sitemap": "^2.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
