--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
+    "random-js": "^2.1.0",
     "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
