--- a/package.json
+++ b/package.json
@@ -9,11 +9,38 @@
   },
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/docs/.vuepress/$1",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__test__/mocks/FileMock.js"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,vue}",
+      "!**/node_modules/**"
+    ]
+  },
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
+    "babel-jest": "^24.9.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^24.9.0",
+    "jest-serializer-vue": "^2.0.2",
+    "vue-jest": "^3.0.5",
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^6.26.3",
     "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
