--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "build:app": "vuepress build docs",
     "build:lambda": "netlify-lambda build lambda",
     "docs:build": "vuepress build docs",
-    "postinstall": "netlify-lambda install"
+    "postinstall": "netlify-lambda install",
+    "generate:heading-ids": "node scripts/generateHeadingIDs.js docs"
   },
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
+    "github-slugger": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
-    "vuepress-plugin-sitemap": "^2.3.0",
     "axios": "^0.19.0",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
