Add tests and configure babel dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": [["env", { "modules": false }]],
+  "presets": [["@babel/env", { "modules": false }]],
   "env": {
     "test": {
-      "presets": [["env", { "targets": { "node": "current" } }]],
+      "presets": [["@babel/env", { "targets": { "node": "current" } }]],
       "plugins": ["transform-es2015-modules-commonjs"]
     }
   }
