--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
       ".*\\.(vue)$": "vue-jest",
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
     },
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/__tests__/mocks/"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/docs/.vuepress/$1",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__test__/mocks/FileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__tests__/mocks/FileMock.js"
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
@@ -34,20 +38,21 @@
     ]
   },
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
-    "babel-preset-env": "^1.7.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
-    "vue-jest": "^3.0.5",
-    "babel-core": "^6.26.3",
     "npm-run-all": "^4.1.5",
+    "vue-jest": "^3.0.5",
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
-    "vuepress-plugin-sitemap": "^2.3.0",
     "axios": "^0.19.0",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
