--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "Alan Woo (Bin Studio) <alan@bin.am>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@vue/test-utils": "^1.0.0-beta.29",
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
-    "babel-preset-env": "^1.7.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
@@ -27,8 +28,8 @@
     "vuepress": "^1.0.0-alpha.47"
   },
   "dependencies": {
-    "vuepress-plugin-sitemap": "^2.3.0",
     "axios": "^0.19.0",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
