--- a/package.json
+++ b/package.json
@@ -52,9 +52,14 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chalk": "^2.4.2",
+    "commander": "^2.20.3",
+    "esm": "^3.2.25",
     "moment": "^2.24.0",
     "netlify-lambda": "^1.6.3",
     "random-js": "^2.1.0",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
     "vuepress-plugin-sitemap": "^2.3.0"
   }
 }
