Fix netlify function issue

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-  "presets": [["@babel/env", { "modules": false }]],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
   "env": {
     "test": {
       "presets": [["@babel/env", { "targets": { "node": "current" } }]],
