docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,6 +13,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "P1X3L0V4",
+      "name": "Anna Karpińska",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/3372341?v=4",
+      "profile": "https://github.com/P1X3L0V4",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
