--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Jannis",
+      "name": "Jannis Pohlmann",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/19324?v=4",
+      "profile": "http://jannispohlmann.de/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
