--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "easeev",
+      "name": "Eugene Aseev",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/14873170?v=4",
+      "profile": "https://github.com/easeev",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
