--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,16 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "shayanb",
+      "name": "Shayan Eskandari",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/309108?v=4",
+      "profile": "https://shayan.es/",
+      "contributions": [
+        "code",
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
