--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,17 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "CPSTL",
+      "name": "CPSTL",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/32653033?v=4",
+      "profile": "https://github.com/CPSTL",
+      "contributions": [
+        "content",
+        "review",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
