--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "ethers",
+      "name": "ethers",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/6937903?v=4",
+      "profile": "https://github.com/ethers",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
