docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "eswarasai",
+      "name": "Eswara Sai",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/5172086?v=4",
+      "profile": "https://eswarasai.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
