--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "zoek1",
+      "name": "Miguel Angel Gordián",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/660973?v=4",
+      "profile": "http://zoek1.github.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
