--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,17 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "wtf",
+      "name": "wtf",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/2460739?v=4",
+      "profile": "https://github.com/wtf",
+      "contributions": [
+        "code",
+        "review",
+        "infra"
+      ]
     }
   ],
   "contributorsPerLine": 7,
