docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "zscole",
+      "name": "Zak Cole",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/20308948?v=4",
+      "profile": "http://www.whiteblock.io",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
