docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "s0b0lev",
+      "name": " Aleksandr Sobolev",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/2613381?v=4",
+      "profile": "https://s0b0lev.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
