--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "realabbas",
+      "name": "Ali Abbas",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/43527087?v=4",
+      "profile": "https://www.mrroom.in",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
