docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "maheshmurthy",
+      "name": "Mahesh Murthy",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/70360?v=4",
+      "profile": "https://www.zastrin.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
