docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "gesquinca",
+      "name": "Gustavo Esquinca",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1707044?v=4",
+      "profile": "http://twitter.com/gesq_",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
