--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "bmann",
+      "name": "Boris Mann",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/280420?v=4",
+      "profile": "https://blog.bmannconsulting.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
