--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Sunghee2",
+      "name": "Sunghee Lee",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/31603479?v=4",
+      "profile": "https://github.com/Sunghee2",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
