--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Perseverance",
+      "name": "George Spasov",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/5130509?v=4",
+      "profile": "https://github.com/Perseverance",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
