docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Aniket-Engg",
+      "name": "Aniket",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/30843294?v=4",
+      "profile": "https://github.com/Aniket-Engg",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
