--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "timbeiko",
+      "name": "Tim Beiko",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/9390255?v=4",
+      "profile": "http://www.twitter.com/timbeiko",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
