docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "spalladino",
+      "name": "Santiago Palladino",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/429604?v=4",
+      "profile": "https://twitter.com/smpalladino",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
