--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "shanejonas",
+      "name": "Shane",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/364566?v=4",
+      "profile": "http://shanejonas.net",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
