--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "remiprev",
+      "name": "Rémi Prévost",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/11348?v=4",
+      "profile": "https://exomel.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
