--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "pfletcherhill",
+      "name": "Paul Fletcher-Hill",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1607180?v=4",
+      "profile": "http://paulfletcherhill.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
