--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "ninabreznik",
+      "name": "Nina Breznik",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1076427?v=4",
+      "profile": "http://playproject.io",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
