docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "nabetse00",
+      "name": "nabetse",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/4185026?v=4",
+      "profile": "http://iteasys.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
