docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "mat7ias",
+      "name": "Mattias Nystrom",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/35585644?v=4",
+      "profile": "https://github.com/mat7ias",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
