--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "fzeoli",
+      "name": "Franco Zeoli",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/232174?v=4",
+      "profile": "https://nomiclabs.io",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
