--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "craigwilliams84",
+      "name": "Craig Williams",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/11519649?v=4",
+      "profile": "https://github.com/craigwilliams84",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
