--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "carver",
+      "name": "Jason Carver",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/205327?v=4",
+      "profile": "http://www.linkedin.com/in/cryptocarver",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
