--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "ajsantander",
+      "name": "Alejandro Santander",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/550409?v=4",
+      "profile": "http://ajsantander.github.io/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
