docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Lililashka",
+      "name": "Lililashka",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/28689401?v=4",
+      "profile": "http://impermanence.co",
+      "contributions": [
+        "design"
+      ]
     }
   ],
   "contributorsPerLine": 7,
