docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "JesseAbram",
+      "name": "JesseAbram",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/33698952?v=4",
+      "profile": "https://github.com/JesseAbram",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
