--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "EvanVanNessEth",
+      "name": "EvanVanNessEth",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/34992008?v=4",
+      "profile": "https://github.com/EvanVanNessEth",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
