--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "AlexandrouR",
+      "name": "Rousos Alexandros",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/21177075?v=4",
+      "profile": "https://github.com/AlexandrouR",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
