--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "8bitp",
+      "name": "8bitp",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/8021176?v=4",
+      "profile": "https://github.com/8bitp",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
