docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -701,6 +701,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "natacha-involves",
+      "name": "Natacha Souza",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/49870579?v=4",
+      "profile": "https://github.com/natacha-involves",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
