--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -720,6 +720,18 @@
         "translation",
         "projectManagement"
       ]
+    },
+    {
+      "login": "samajammin",
+      "name": "Sam Richards",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8097623?v=4",
+      "profile": "https://www.samajammin.com/",
+      "contributions": [
+        "code",
+        "content",
+        "doc",
+        "projectManagement"
+      ]
     }
   ],
   "contributorsPerLine": 7,
