--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -732,6 +732,15 @@
         "doc",
         "projectManagement"
       ]
+    },
+    {
+      "login": "antodp",
+      "name": "Antonio Della Porta",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/20992089?v=4",
+      "profile": "http://antodp.xyz",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
