--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -741,6 +741,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Abhimanyu121",
+      "name": "Abhimanyu Shekhawat",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/16034874?v=4",
+      "profile": "https://github.com/Abhimanyu121",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
