--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -750,6 +750,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "fulldecent",
+      "name": "William Entriken",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/382183?v=4",
+      "profile": "http://phor.net",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
