--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -777,6 +777,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Jokyash",
+      "name": "Jokyash",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/44118299?v=4",
+      "profile": "https://github.com/Jokyash",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
