docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -795,6 +795,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "gabririgo",
+      "name": "Gabriele Rigo",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/12066256?v=4",
+      "profile": "https://beta.rigoblock.com",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
