docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -813,6 +813,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "jJosko1986",
+      "name": "jJosko1986",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/54378053?v=4",
+      "profile": "https://github.com/jJosko1986",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
