docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -831,6 +831,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "damianoazzolini",
+      "name": "Damiano Azzolini",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/24901681?v=4",
+      "profile": "https://github.com/damianoazzolini",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
