docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -840,6 +840,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "matteopey",
+      "name": "matteopey",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/28830727?v=4",
+      "profile": "https://github.com/matteopey",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
