docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -849,6 +849,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "kilu83",
+      "name": "Hun Ryu",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/29397119?v=4",
+      "profile": "https://github.com/kilu83",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
