docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -858,6 +858,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "nake13",
+      "name": "nake13",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6271031?v=4",
+      "profile": "https://github.com/nake13",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
