docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -867,6 +867,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "alexiskefalas",
+      "name": "alexiskefalas",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/57708389?v=4",
+      "profile": "https://github.com/alexiskefalas",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
