docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -876,6 +876,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "behradkhodayar",
+      "name": "Behrad Khodayar",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/16176436?v=4",
+      "profile": "http://Behrad.Khodayar.me",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
