docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -885,6 +885,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Frankaus",
+      "name": "Frankaus",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/57708955?v=4",
+      "profile": "https://github.com/Frankaus",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
