docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -904,6 +904,15 @@
         "code",
         "translation"
       ]
+    },
+    {
+      "login": "DjangoM",
+      "name": "Jaroslav Macej",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/35060411?v=4",
+      "profile": "https://github.com/DjangoM",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
