docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -913,6 +913,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "EmanHerawy",
+      "name": "Eman Herawy",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/10674070?v=4",
+      "profile": "https://github.com/EmanHerawy",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
