--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -922,6 +922,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Bellinas",
+      "name": "Bellinas",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/45827044?v=4",
+      "profile": "https://github.com/Bellinas",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
