--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -931,6 +931,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "amchercashin",
+      "name": "Alexander Cherkashin",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/8727497?v=4",
+      "profile": "https://github.com/amchercashin",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
