--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@babel/preset-env": "^7.6.3",
     "@vue/test-utils": "^1.0.0-beta.29",
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.2.0",
     "github-slugger": "^1.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -35,7 +35,7 @@
     "jest-transform-stub": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pretty-quick": "^2.0.0",
-    "vue-jest": "^3.0.5",
+    "vue-jest": "^3.0.5"
   },
   "dependencies": {
     "axios": "^0.19.0",
