--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -941,6 +941,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "EnochMbaebie",
+      "name": "Enoch Mbaebie",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/29120867?v=4",
+      "profile": "http://www.soarontech.com.ng",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
