--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -950,6 +950,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "inlak16",
+      "name": "inlak16",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/53479637?v=4",
+      "profile": "https://github.com/inlak16",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
