--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -959,6 +959,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "bobjiang",
+      "name": "Bob Jiang",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1224604?v=4",
+      "profile": "https://www.c4at.cn/",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
