--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -968,6 +968,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "cobject",
+      "name": "Suhun Kim",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/826798?v=4",
+      "profile": "https://www.linkedin.com/in/suhunkim/",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
