docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -986,6 +986,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "HachemiH",
+      "name": "Hachemi",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/12778013?v=4",
+      "profile": "https://twitter.com/_Hachemi_",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
