docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -995,6 +995,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "hanzoh1",
+      "name": "hanzoh",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/42790758?v=4",
+      "profile": "https://github.com/hanzoh1",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
