docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1013,6 +1013,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "Enigmatic331",
+      "name": "Enigmatic331",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/28551011?v=4",
+      "profile": "https://github.com/Enigmatic331",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
