--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1032,6 +1032,16 @@
         "content",
         "translation"
       ]
+    },
+    {
+      "login": "pontiyaraja",
+      "name": "Pandiyaraja Ramamoorthy",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1989030?v=4",
+      "profile": "https://github.com/pontiyaraja",
+      "contributions": [
+        "content",
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
