docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1042,6 +1042,16 @@
         "content",
         "translation"
       ]
+    },
+    {
+      "login": "Kuekuatsheu95",
+      "name": "Archan Roychoudhury",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/45584024?v=4",
+      "profile": "https://github.com/Kuekuatsheu95",
+      "contributions": [
+        "content",
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
