--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1052,6 +1052,16 @@
         "content",
         "translation"
       ]
+    },
+    {
+      "login": "its-VSP",
+      "name": "SAI PRASHANTH VUPPALA",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/22447085?v=4",
+      "profile": "https://github.com/its-VSP",
+      "contributions": [
+        "content",
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
