docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1071,6 +1071,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "jeedani",
+      "name": "jeedani",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/36130718?v=4",
+      "profile": "https://github.com/jeedani",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
