--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -327,7 +327,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/8542397?v=4",
       "profile": "https://wanseob.com",
       "contributions": [
-        "content"
+        "content",
+        "translation"
       ]
     },
     {
