docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1090,6 +1090,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "karansinghgit",
+      "name": "karansinghgit",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/44376616?v=4",
+      "profile": "https://github.com/karansinghgit",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
